package org.algo3.Actividad;

public class Grupales extends Actividad {
    public Grupales(int maxClases) {
        super(maxClases);
    }
}
