package org.algo3.Actividad;

public class SalaMusculacion extends Actividad {
    public SalaMusculacion(int unUsoMax) {
        super(unUsoMax);
    }
}
