package org.algo3.Errors;

public class UsosExcedidosError extends RuntimeException {
}
